--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ cache:
 
 
 before_install:
+- rvm install 2.4.1
 - openssl aes-256-cbc -K $encrypted_d44857a9a818_key -iv $encrypted_d44857a9a818_iv -in publish-key.enc -out ~/.ssh/publish-key -d
 - chmod u=rw,og= ~/.ssh/publish-key
 - echo "Host github.com" >> ~/.ssh/config
