--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,30 @@
-argparse
-beautifulsoup4
-blinker
-docutils
-ecdsa
-feedgenerator
-jinja2
-lxml
-markdown
-markupsafe
-mdx-video
-paramiko
-pelican<=3.8
-pillow==2.6.1
-pycrypto
-pygments
-python-dateutil
-pytz
-six
-smartypants
-typogrify
-unidecode
-ghp-import
+asn1crypto==0.24.0
+bcrypt==3.1.6
+beautifulsoup4==4.7.1
+blinker==1.4
+cffi==1.12.3
+cryptography==2.6.1
+docutils==0.14
+ecdsa==0.13.2
+feedgenerator==1.9
+ghp-import==0.5.5
+Jinja2==2.10.1
+lxml==4.3.3
+Markdown==3.1
+MarkupSafe==1.1.1
+mdx-video==0.1.8
+paramiko==2.4.2
+pelican==3.7.1
+Pillow==6.0.0
+pyasn1==0.4.5
+pycparser==2.19
+pycrypto==2.6.1
+Pygments==2.3.1
+PyNaCl==1.3.0
+python-dateutil==2.8.0
+pytz==2019.1
+six==1.12.0
+smartypants==2.0.1
+soupsieve==1.9.1
+typogrify==2.0.7
+Unidecode==1.0.23
